kustomization/overlays/prod/linux-mcp/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linux-mcp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: linux-mcp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: linux-mcp
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - --host
            - $(POD_IP)
          command:
            - linux-mcp-server
          image: quay.io/redhat-services-prod/rhel-lightspeed-tenant/linux-mcp-server
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: web
            timeoutSeconds: 5
          name: linux-mcp
          ports:
            - containerPort: 8000
              name: web
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: web
            timeoutSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1001
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /etc/linux-mcp/ssh
              name: known-hosts
              readOnly: true
            - mountPath: /etc/linux-mcp/ssh-key
              name: ssh-key
              readOnly: true
            - mountPath: /tmp
              name: tmp
      enableServiceLinks: false
      securityContext:
        fsGroup: 1001
      volumes:
        - configMap:
            name: linux-mcp-configmap
          name: known-hosts
        - name: ssh-key
          secret:
            defaultMode: 0440
            secretName: linux-mcp-secret
        - emptyDir: {}
          name: tmp
