kustomization/overlays/prod/linux-mcp/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: linux-mcp-svc
spec:
  ports:
    - name: web
      port: 8000
      protocol: TCP
      targetPort: web
  selector:
    app.kubernetes.io/name: linux-mcp
  type: ClusterIP
